src/snapshots/parse_idb@ls__ls-v700.idb__file_regions.snap
---
hash: CDDC9DCCEB7A4BC4
source: src/test.rs
expression: file_regions
---
[
 (
  start: 134518444,
  end: 134518479,
  eva: 5804,
 ),
 (
  start: 134518480,
  end: 134520288,
  eva: 5840,
 ),
 (
  start: 134520288,
  end: 134520296,
  eva: 7648,
 ),
 (
  start: 134520304,
  end: 134592052,
  eva: 7664,
 ),
 (
  start: 134592052,
  end: 134592072,
  eva: 79412,
 ),
 (
  start: 134592096,
  end: 134614036,
  eva: 79456,
 ),
 (
  start: 134614036,
  end: 134616112,
  eva: 101396,
 ),
 (
  start: 134616112,
  end: 134636760,
  eva: 103472,
 ),
 (
  start: 134643456,
  end: 134643460,
  eva: 126720,
 ),
 (
  start: 134643460,
  end: 134643464,
  eva: 126724,
 ),
 (
  start: 134643464,
  end: 134643468,
  eva: 126728,
 ),
 (
  start: 134643708,
  end: 134643712,
  eva: 126972,
 ),
 (
  start: 134643712,
  end: 134644172,
  eva: 126976,
 ),
 (
  start: 134644192,
  end: 134644548,
  eva: 127456,
 ),
]