src/snapshots/parse_idb@ls__ls-v700.idb__ida_info.snap
---
hash: 82E8D717B82E5D93
source: src/test.rs
expression: ida_info
---
(
 version: 695,
 target: (
  processor: [
   109,
   101,
   116,
   97,
   112,
   99,
  ],
  assembler: 0,
 ),
 genflags: (163),
 lflags: (27),
 database_change_count: 836,
 input: (
  file_format: Elf,
  operating_system: 0,
  application_type: 0,
 ),
 special_segment_entry_size: 4,
 af: (3755994615, 3),
 addresses: (
  loading_base: 0,
  initial_ss: 4294967295,
  initial_cs: 4,
  initial_ip: 134528745,
  initial_ea: (134528745),
  initial_sp: 4294967295,
  main_ea: (4294967295),
  min_ea: (134518444),
  max_ea: (134648200),
  original_min_ea: (134518444),
  original_max_ea: (134648200),
  privrange: (
   start: (0),
   end: (0),
  ),
  netdelta: 0,
 ),
 suspiciousness_limits: (
  low: Some((134518444)),
  high: Some((134648288)),
 ),
 xrefs: (
  max_depth: 16,
  max_displayed_xrefs: 0,
  max_displayed_type_xrefs: 2,
  max_displayed_strlit_xrefs: 1,
  xrefflag: (15),
 ),
 names: (
  max_autogenerated_name_length: 15,
  dummy_names: Ea,
 ),
 demangler: (
  short_form: 245612135,
  long_form: 104857607,
  name: (0),
 ),
 listname: (7),
 indent: 0,
 cmt_ident: 24,
 margin: 40,
 listing: (
  xref_margin: 80,
 ),
 outflag: (768),
 cmtflg: (9),
 limiter: (0),
 bin_prefix_size: 0,
 prefflag: (1),
 strlits: (
  flags: (19),
  break_: 10,
  leading_zeroes: 0,
  name_prefix: [
   97,
   0,
   0,
   0,
   0,
   0,
  ],
  serial_number: 0,
 ),
 strtype: 0,
 data_carousel: 7,
 compiler: (
  is_guessed: false,
  compiler: Gnu,
  sizeof: (
   cm: Some(NN),
   int: 4,
   bool: 1,
   enum_: Some(4),
   short: Some(2),
   long: Some(4),
   longlong: Some(8),
   long_double: Some(12),
  ),
  alignment: None,
 ),
 abibits: (1),
 appcall_options: 0,
)