src/snapshots/parse_idb@ls__ls-v700.idb__input_file.snap
---
source: src/test.rs
expression: input_file
---
"C:\\Documents and Settings\\Administrator\\���� ȭ��\\ls\u0000"
