src/snapshots/parse_idb@ls__ls-v700.idb__input_file_md5.snap
---
hash: 4682DC1BD25E0449
source: src/test.rs
expression: input_file_md5
---
Some((73, 164, 4, 106, 97, 11, 34, 117, 52, 66, 220, 117, 60, 4, 250, 140))