src/snapshots/parse_idb@ls__ls-v700.idb__segments.snap
---
hash: 78DDBB310103400E
source: src/test.rs
expression: segments
---
[
 (
  address: (
   start: (134518444),
   end: (134518479),
  ),
  name: (1),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((5)),
  bitness: S32Bits,
  seg_type: Code,
  selector: 1,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134518480),
   end: (134520288),
  ),
  name: (3),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: Some((5)),
  bitness: S32Bits,
  seg_type: Code,
  selector: 2,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134520288),
   end: (134520296),
  ),
  name: (4),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelQword,
  comb: Pub,
  perm: Some((5)),
  bitness: S32Bits,
  seg_type: Code,
  selector: 3,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134520304),
   end: (134592052),
  ),
  name: (5),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: Some((5)),
  bitness: S32Bits,
  seg_type: Code,
  selector: 4,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134592052),
   end: (134592072),
  ),
  name: (6),
  class_id: (2),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((5)),
  bitness: S32Bits,
  seg_type: Code,
  selector: 5,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134592096),
   end: (134614036),
  ),
  name: (7),
  class_id: (8),
  orgbase: 0,
  flags: (16),
  align: Rel32Bytes,
  comb: Pub,
  perm: Some((4)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 6,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134614036),
   end: (134616112),
  ),
  name: (9),
  class_id: (8),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((4)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 7,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134616112),
   end: (134636760),
  ),
  name: (10),
  class_id: (8),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((4)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 8,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134643456),
   end: (134643460),
  ),
  name: (11),
  class_id: (12),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 9,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134643460),
   end: (134643464),
  ),
  name: (13),
  class_id: (12),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 10,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134643464),
   end: (134643468),
  ),
  name: (14),
  class_id: (12),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 11,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134643708),
   end: (134643712),
  ),
  name: (15),
  class_id: (12),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 12,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134643712),
   end: (134644172),
  ),
  name: (16),
  class_id: (12),
  orgbase: 0,
  flags: (16),
  align: RelDble,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 13,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134644192),
   end: (134644548),
  ),
  name: (17),
  class_id: (12),
  orgbase: 0,
  flags: (16),
  align: Rel32Bytes,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Data,
  selector: 14,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134644608),
   end: (134647736),
  ),
  name: (18),
  class_id: (19),
  orgbase: 0,
  flags: (16),
  align: Rel64Bytes,
  comb: Pub,
  perm: Some((6)),
  bitness: S32Bits,
  seg_type: Bss,
  selector: 15,
  defsr: (None, None, None, Some(14), None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
 (
  address: (
   start: (134647736),
   end: (134648200),
  ),
  name: (20),
  class_id: (0),
  orgbase: 0,
  flags: (16),
  align: RelPara,
  comb: Pub,
  perm: None,
  bitness: S32Bits,
  seg_type: Xtrn,
  selector: 16,
  defsr: (None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None),
  color: 0,
 ),
]